# rusty-razorpay

./: .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.github/: dependabot.yml
examples/: create_order.rs  fetch_all_order.rs  fetch_order.rs  update_order.rs
src/: account.rs  addon.rs  address.rs  api.rs  card.rs  common.rs  customer.rs  dispute.rs  document.rs  entity.rs  error.rs  ids.rs  iin.rs  invoice.rs  item.rs  lib.rs  line_item.rs  offer.rs  order.rs  payment.rs  plan.rs  razorpay.rs  refund.rs  settlement.rs  subscription.rs  util.rs  webhook.rs
