[package]
name = "rusty-razorpay"
description = "Razorpay SDK for Rust"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Dilshad <a-rustacean@outlook.com>"]
repository = "https://github.com/a-rustacean/rusty-razorpay"
documentation = "https://docs.rs/rusty-razorpay"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol_str = "0.2"
