[package]
name = "rusty-razorpay"
description = "Razorpay SDK for Rust"
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["Dilshad <a-rustacean@outlook.com>"]
repository = "https://github.com/a-rustacean/rusty-razorpay"
documentation = "https://docs.rs/rusty-razorpay"
keywords = ["razorpay", "api", "async"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
reqwest = { version = "0.11", features = ["json"] }
ring = "0.17"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
smol_str = "0.2"
hashbrown = { version = "0.14.3", features = ["serde"] }

[features]
default = ["std"]
std = ["serde/std"]
