[package]
name = "rusty-razorpay"
description = "Razorpay SDK for Rust"
version = "0.3.2"
edition = "2021"
license = "MIT"
authors = ["Dilshad <a-rustacean@outlook.com>"]
repository = "https://github.com/a-rustacean/rusty-razorpay"
documentation = "https://docs.rs/rusty-razorpay"
keywords = ["razorpay", "api", "async"]
categories = ["api-bindings"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
reqwest = { version = "0.12", features = ["json"] }
ring = "0.17"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
smol_str = "0.2"
hashbrown = { version = "0.14.5", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }

[features]
default = ["std"]
std = ["serde/std"]
